--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.25/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="./assets/scripts/angular-cookies.js"></script>
 		<script src="//morgul.github.io/ui-bootstrap4/ui-bootstrap-tpls-3.0.6.js"></script>
+		
 		<!-- End - Angular Js -->
 
 		<!-- Start - Daterangepicker -->
@@ -38,6 +39,7 @@
 		<script type="text/javascript" src="./assets/js/service.js"></script>
 		<script type="text/javascript" src="./assets/js/filters/safehtml.js" ></script>
 		<script type="text/javascript" src="./assets/controller/login.js"></script>
+		<script type="text/javascript" src="./assets/controller/authy.js"></script>
 		<!--End - Angular Js controllers-->
 
 		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
@@ -54,7 +56,6 @@
 		 
 		
 		<div ui-view></div>
-		<?php //include_once('./templates/bootstrap-modal.html'); ?>
 		<div class="term-conditions">
 			<span><a onclick="window.open('https://www.drmetrix.com/termsandconditions.html', '_blank', 'scrollbars=yes,status=yes');">Terms &amp; Conditions</a>|
 				<a onclick="window.open('https://www.drmetrix.com/privacypolicy.html', '_blank', 'scrollbars=yes,status=yes');">Privacy Policy</a>|
