Eula agreement done

--- a/index.html
+++ b/index.html
@@ -27,35 +27,34 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.25/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="./assets/scripts/angular-cookies.js"></script>
 		<script src="//morgul.github.io/ui-bootstrap4/ui-bootstrap-tpls-3.0.6.js"></script>
+		<!-- <script type="text/javascript" src="./assets/scripts/jquery.min.js"></script> -->
 		
 		<!-- End - Angular Js -->
 
 		<!-- Start - Daterangepicker -->
 		<!-- End - Daterangepicker -->
 
-		<!--Start - Angular Js controllers-->
+		<!--Start - Angular Js Services/Directives/Filters-->
 		<script type="text/javascript" src="./app.js"></script>
 		<script type="text/javascript" src="./assets/js/shared/confirmBox/modalConfirmService.js" ></script>
 		<script type="text/javascript" src="./assets/js/service.js"></script>
 		<script type="text/javascript" src="./assets/js/filters/safehtml.js" ></script>
-		<script type="text/javascript" src="./assets/controller/login.js"></script>
-		<script type="text/javascript" src="./assets/controller/authy.js"></script>
+		<script type="text/javascript" src="./assets/js/service.js"></script>
+		<!--End - Angular Js Services/Directives/Filters-->
+
+		<!--Start - Angular Js controllers-->
+		<script type="text/javascript" src="./assets/js/controllers/main.js"></script>
+		<script type="text/javascript" src="./assets/js/controllers/login.js"></script>
+		<script type="text/javascript" src="./assets/js/controllers/authy.js"></script>
+		<script type="text/javascript" src="./assets/js/controllers/eulaAgreement.js"></script>
+		<script type="text/javascript" src="./assets/js/controllers/ranking.js"></script>
 		<!--End - Angular Js controllers-->
 
 		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
 	</head>
-	<body ng-app="drmApp">
-		 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T3CWFZ"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-T3CWFZ');
-		</script>
-		 
-		
+	<body ng-app="drmApp" ng-controller="MainController">	
 		<div ui-view></div>
+		<!-- <ng-include src="'./templates/modals/modalDialog.html'"></ng-include> -->
 		<div class="term-conditions">
 			<span><a onclick="window.open('https://www.drmetrix.com/termsandconditions.html', '_blank', 'scrollbars=yes,status=yes');">Terms &amp; Conditions</a>|
 				<a onclick="window.open('https://www.drmetrix.com/privacypolicy.html', '_blank', 'scrollbars=yes,status=yes');">Privacy Policy</a>|
