Headre work started

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no"/>
 		<title>DRMetrix - THE DNA OF DIRECT RESPONSE</title>
+		<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon"/>
 		<link href='./assets/css/circle.css' rel='stylesheet' type='text/css'/>
     <link href="./assets/css/v-accordion.css" rel="stylesheet"/>
 		<link href="./assets/css/listnav.css" rel="stylesheet"/>
@@ -27,6 +28,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.25/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="./assets/scripts/angular-cookies.js"></script>
 		<script src="//morgul.github.io/ui-bootstrap4/ui-bootstrap-tpls-3.0.6.js"></script>
+		<script type="text/javascript" src="https://cdn.rawgit.com/AlphaGit/ng-pattern-restrict/master/src/ng-pattern-restrict.min.js"></script>
 		<!-- <script type="text/javascript" src="./assets/scripts/jquery.min.js"></script> -->
 		
 		<!-- End - Angular Js -->
@@ -53,13 +55,172 @@
 		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
 	</head>
 	<body ng-app="drmApp" ng-controller="MainController">	
+			<header class="navbar navbar-dark sticky-top bg-dark p-0" ng-show="login_user_id != ''">
+					<ul class="nav-menu">
+							<li>
+									<a href="index.html">
+											<img src="./assets/images/adspherelogowhite.svg" alt="drmetrix-logo">
+									</a>
+							</li>
+							<li ng-repeat="item in main_menu" id="{{item.liid}}" ng-hide="{{item.nghide}}" ui-sref-active="top-menu-active" class="d-none d-xl-flex" alt="{{item.title}}">
+									<a ng-click="menuItemClick(item.title, this);" ui-sref="{{item.href}}" class="{{item.aclass}}"   id="{{item.aid}}" >
+										<img src="{{item.src}}" alt="{{item.title}}">{{item.title}}
+									</a>
+							</li>
+							 <li class="dropdown show whats-new d-none d-xl-flex">
+									<a class="dropdown-toggle"  role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" >
+											<i data-feather="mail"></i><label> What's New</label>
+											<div class="notification-new">5</div>
+									</a>
+									<div class="dropdown-menu" aria-labelledby="dropdownMenuLink" >
+											<a class="dropdown-item" href="{{item.href}}" ng-class="{'newbuild-link' : newBuild == 1}" ng-repeat="item in whatsNew_menu">
+												{{item.title}}
+													<i class="newBuild == 1 ? 'fa fa-chain' : 'fa fa-play-circle-o fa-2x'"></i>
+											</a>
+									</div>
+							</li>
+							<li class="global-search border-r-desktop">
+									<form class="shrink align-right" name="frmSearch" no-validate="" ng-submit="search_result()">
+										<span class="search-filter" ng-class="!frmSearch.globalSearchInputText.$valid ? 'error-text-box':''">
+												<span class="search-icon">
+														<i data-feather="search"></i>
+												</span>
+												<input type="text" placeholder="Search Advertiser, Brand or Creative" autocomplete="off" ng-model-options="{debounce: 250}" ng-model="globalSearchInputText" id="globalSearchInputText" name="globalSearchInputText" ng-minlength="3">
+										</span>
+										<span class="inline-label search-text-validation-error" ng-show="frmSearch.globalSearchInputText.$error.minlength">
+												<b>Note:</b> <span>{{searchTextValidation}}</span>
+										</span>
+										<div class="search-container scrollbar" style="display: none;">
+												<div id="no_record_msg" style="display:none;">Can't find what you're looking for?
+														<a href="#" zf-open="userFeedbackModal" onclick="showModalBolcks();">Click here</a>
+												</div>
+												<div id="adv_gs_view">
+														<div class="search-heading-main">
+																Advertisers (<span id="global_search_adv_count"></span>)
+																<span id="adv_view_all"></span>
+														</div>
+														<ul class="no-bullet" id="adv_list_ul">
+														</ul>
+												</div>
+												<div id="brands_gs_view">
+														<div class="search-heading-main">
+																Brands (<span id="global_search_brand_count"></span>)
+																<span id="brand_view_all"></span>
+														</div>
+														<ul class="no-bullet" id="brand_list_ul">
+														</ul>
+												</div>
+												<div id="creatives_gs_view">
+														<div class="search-heading-main">
+																Creatives (<span id="global_search_creative_count"></span>)
+																<span id="creative_view_all"></span>
+														</div>
+														<ul class="no-bullet" id="creative_list_ul">
+														</ul>
+												</div>
+												<div class="show-feedback-option top-border" id="feddback_div" style="display:none;">
+														Can't find what you're looking for?
+														<a zf-open="userFeedbackModal" onclick="showModalBolcks();" class="link-color m-left8">Click here</a>
+												</div>
+										</div>
+									</form>
+							</li>
+							<li ng-repeat="item in sub_menu" class="d-none d-xl-flex">
+									<a title="{{item.title}}" target="{{item.target}}" ui-sref={{item.href}}  id="{{item.aid}}" ng-click="menuItemClick(item.title, this);" >
+										<img src="{{item.src}}" alt="{{item.alt}}">{{item.title}}
+									</a>
+							</li>
+							<!--
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<i data-feather="user"></i><label>User</label>
+									</a>
+							</li>        
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<i data-feather="share-2"></i> <label>Network List</label>
+									</a>
+							</li>    
+							
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<img src="./assets/images/menuiconset-02.svg" alt=""> <label>Blog</label>
+									</a>
+							</li>      
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<i data-feather="file-text"></i><label> User Guide</label>
+									</a>
+							</li>
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<img src="./assets/images/menuiconset-08.svg" alt=""> <label>Dark Mode</label>
+									</a>
+							</li>
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<img src="./assets/images/menuiconset-15.svg" alt=""><label> System Status</label>
+									</a>
+							</li>            
+							<li class="d-none d-xl-flex">
+									<a href="#">
+											<i data-feather="log-out"></i> <label>Logout</label>
+									</a>            
+							</li>
+							<li class="right-menu d-lg-flex d-xl-none">
+									<a class=" open-menu">
+											<i data-feather="align-justify"></i>
+									</a>  
+							</li>             -->
+					</ul>
+					<!-- black-top menu -->
+					<!-- <div class="black-top-menu">
+							<ul class="left-menu">
+									<li>Welcome Joseph,</li>
+									<li class="active-alert">
+											<a href="#">
+													<label for="">Brands</label>
+											</a>
+									</li>
+									<li>
+											<a href="#">
+													<label for="">Advertisers</label>
+											</a>
+									</li>
+							</ul>
+							<ul class="checkbox-filter">
+									<li class="filter-listing">
+											<a href="javascript:void(0);" id="chooseList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-toggle save-list show-list-option">Choose List</a>
+											<div class="dropdown-menu" aria-labelledby="chooseList">
+													<a class="dropdown-item newbuild-link" href="#">New October Build<i class="fa fa-chain"></i></a>
+													<a class="dropdown-item" href="#">Advertiser Page Update<i class="fa fa-play-circle-o fa-2x"></i></a>
+													<a class="dropdown-item" href="#">Auto-Email Reports<i class="fa fa-play-circle-o fa-2x"></i></a>
+													<a class="dropdown-item" href="#">New Network Excel<i class="fa fa-play-circle-o fa-2x"></i></a>
+													<a class="dropdown-item" href="#">New Airing Detail Page<i class="fa fa-play-circle-o fa-2x"></i></a>
+													<a class="dropdown-item" href="#">Other Training Videos<i class="fa fa-play-circle-o fa-2x"></i></a>
+											</div> 
+									 </li>                
+									<li>
+											<a href="#" class="filter-listing dropdown-toggle" data-toggle="modal" data-target="#filterlisting">
+													Filters
+											</a>
+									</li>
+									<li>
+											<a href="#" class="btn btn-blue btn-sm">
+													<i class="fa fa-download"></i> Excel
+											</a>
+									</li>
+							</ul>
+					</div> -->
+		</header>  
 		<div ui-view></div>
 		<!-- <ng-include src="'./templates/modals/modalDialog.html'"></ng-include> -->
 		<div class="term-conditions">
-			<span><a onclick="window.open('https://www.drmetrix.com/termsandconditions.html', '_blank', 'scrollbars=yes,status=yes');">Terms &amp; Conditions</a>|
+			<span>
+				<a onclick="window.open('https://www.drmetrix.com/termsandconditions.html', '_blank', 'scrollbars=yes,status=yes');">Terms &amp; Conditions</a>|
 				<a onclick="window.open('https://www.drmetrix.com/privacypolicy.html', '_blank', 'scrollbars=yes,status=yes');">Privacy Policy</a>|
-				<a  href="javascript:void(0)" onclick="downloadPdf();">EULA</a></span>
-			<p>&copy; {{user.year_of_copyrights}} DRMetrix</p>
+				<a onclick="downloadPdf();">EULA</a></span>
+			<p>&copy; {{date| date:'yyyy'}} DRMetrix</p>
 		</div>
 </body>
 </html>
