--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
 	<script type="text/javascript" src="./assets/js/filters/safehtml.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 
+	<!--Start - Angular Js controllers-->
+	<script type="text/javascript" src="./assets/js/controllers/main.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/login.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/authy.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/eulaAgreement.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/ranking.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/user.js"></script>
+
+	<!--Start - Angular UI grid -->
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-touch.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-animate.js"></script>
+	<script src="http://ui-grid.info/release/ui-grid.js"></script>
+	<link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
+
 		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
 	</head>
 	<body ng-app="drmApp" ng-controller="MainController">	
