User section with new angular ui grid -3

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-animate.js"></script>
 	<script src="http://ui-grid.info/release/ui-grid.js"></script>
 	<link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
+	<!-- Modal Pop-up -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
 	</head>
