Category section done but sub category selection is having issues.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet">
     <link href="./assets/css/ui.jqgrid.min.css"  rel="stylesheet"/>
-    <link href="./assets/css/app.css" rel="stylesheet" type="text/css"/>
+    <!-- <link href="./assets/css/app.css" rel="stylesheet" type="text/css"/> -->
 		<link href="./assets/css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="./assets/css/style.css" rel="stylesheet" type="text/css"/>
+    <!-- <link href="./assets/css/style.css" rel="stylesheet" type="text/css"/> -->
 
 		<!-- Start - Angular Js -->
 		<script type="text/javascript" src="./assets/scripts/angular.min.js"></script>
-		<script src="//code.angularjs.org/1.2.20/angular-sanitize.min.js"></script>
-		<!-- <script type="text/javascript" src="./assets/scripts/angular-route.min.js"></script> -->
+		<!-- <script src="//code.angularjs.org/1.2.20/angular-sanitize.min.js"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.25/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="./assets/scripts/angular-cookies.js"></script>
 		<script src="//morgul.github.io/ui-bootstrap4/ui-bootstrap-tpls-3.0.6.js"></script>
-		<script type="text/javascript" src="https://cdn.rawgit.com/AlphaGit/ng-pattern-restrict/master/src/ng-pattern-restrict.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-		<!-- <script type="text/javascript" src="./assets/scripts/jquery.min.js"></script> -->
+		<!-- <script type="text/javascript" src="https://cdn.rawgit.com/AlphaGit/ng-pattern-restrict/master/src/ng-pattern-restrict.min.js"></script> -->
+		<script src="./assets/icons/feather.min.js"></script>
 		
 		<!-- End - Angular Js -->
 
