User section action Edit pop-up-5

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 	<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		type="text/css" />
-
-
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet">
 	<link href="./assets/css/ui.jqgrid.min.css" rel="stylesheet" />
+	<link href="./assets/css/ui-grid.css" rel="stylesheet" type="text/css" />
 	<link href="./assets/css/app.css" rel="stylesheet" type="text/css" />
-	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 
 	<!-- Angular Js -->
 	<script type="text/javascript" src="./assets/scripts/angular.min.js"></script>
@@ -48,14 +47,16 @@
 	<!--Start - Angular UI grid -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-touch.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular-animate.js"></script>
-	<script src="http://ui-grid.info/release/ui-grid.js"></script>
-	<link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
-	<!-- Modal Pop-up -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="./assets/js/ui-grid.js"></script>
+	<!-- <script src="http://ui-grid.info/release/ui-grid.js"></script> -->
+	<!-- <link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css"> -->
 
-		<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
+	<!-- Modal Pop-up -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="https://content.jwplatform.com/libraries/AkDbgEI8.js"></script> <!-- For video play -->
 	</head>
 	<body ng-app="drmApp" ng-controller="MainController">	
 			<header class="navbar navbar-dark sticky-top bg-dark p-0" ng-show="login_user_id != ''">
