--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	<script type="text/javascript" src="./assets/js/filters/safehtml.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 
-	<!--Start - Angular Js controllers-->
+    <!--Start - Angular Js controllers-->
+    <script type="text/javascript" src="./assets/js/components/categories.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/main.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/login.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/authy.js"></script>
@@ -134,7 +135,7 @@
 						<img ng-src="{{item.src}}" alt="{{item.alt}}">{{item.title}}
 					</a>
 				</li>
-				<li class="right-menu d-lg-flex d-xl-none" ng-click="click();">
+				<li class="right-menu d-lg-flex d-xl-none" ng-click="showme=true">
 					<a class="open-menu">
 						<i data-feather="align-justify"></i>
 					</a>  
@@ -206,6 +207,48 @@
 		  
 		
 	</header>  
+	<!-- black-top menu -->
+    <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
+        <ul class="left-menu">
+            <li>Welcome {{complete_name}},</li>
+            <li ng-class="{active_alert : type == 'brands'}">
+                <a ng-click="showTab('brands')">
+                    <label for="">Brands</label>
+                </a>
+            </li>
+            <li ng-class="{active_alert : type == 'advertisers'}">
+                <a ng-click="showTab('advertisers')">
+                    <label for="">Advertisers</label>
+                </a>
+            </li>
+        </ul>
+        <ul class="checkbox-filter">
+
+            <li class="filter-listing">
+                <a href="unsafe:javascript:void(0);" id="chooseList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-toggle save-list show-list-option">Choose List</a>
+                <div class="dropdown-menu"  aria-labelledby="chooseList">
+                        <a class="dropdown-item newbuild-link" href="#">New October Build<i class="fa fa-chain"></i></a>
+                        <a class="dropdown-item" href="#">Advertiser Page Update<i class="fa fa-play-circle-o fa-2x"></i></a>
+                        <a class="dropdown-item" href="#">Auto-Email Reports<i class="fa fa-play-circle-o fa-2x"></i></a>
+                        <a class="dropdown-item" href="#">New Network Excel<i class="fa fa-play-circle-o fa-2x"></i></a>
+                        <a class="dropdown-item" href="#">New Airing Detail Page<i class="fa fa-play-circle-o fa-2x"></i></a>
+                        <a class="dropdown-item" href="#">Other Training Videos<i class="fa fa-play-circle-o fa-2x"></i></a>
+                </div> 
+                </li>                
+            <li>
+                <a class="filter-listing"  ng-click="call_filter_list('filter_list_rank');">
+                    Filters <i class="fa fa-caret-down fa-lg downarrow-icon"></i>
+                </a>
+            </li>
+            <li>
+                <a class="btn btn-blue">
+                    <i class="fa fa-download"></i> Excel
+                </a>
+            </li>
+        </ul>
+</div>
+
+
 	<div ui-view></div>
 	<!-- <ng-include src="'./templates/modals/modalDialog.html'"></ng-include> -->
 	<div class="term-conditions">
