--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <ul class="left-menu">
             <li>Welcome {{complete_name}},</li>
             <li ng-class="{active_alert : type == 'brands'}">
-                <a ng-click="showTab('brands')">{{type}}
+                <a ng-click="showTab('brands')">
                     <label for="">Brands</label>
                 </a>
             </li>
