List and filter modal created

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
             <li class="filter-listing">
                 <a href="" id="chooseList" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" class="dropdown-toggle save-list show-list-option">Choose List</a>
                 <div class="dropdown-menu"  aria-labelledby="chooseList">
-						<a href="" ng-click="call_brand_tab_list()" class="dropdown-item s">Brands List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
-						<a href="" ng-click="call_brand_tab_list()" class="dropdown-item s">Advertisers List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
+						<a href="" ng-click="call_brand_tab_list('brand')" class="dropdown-item s">Brands List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
+						<a href="" ng-click="call_brand_tab_list('advertiser')" class="dropdown-item s">Advertisers List <i class="fa fa-caret-down fa-lg downarrow-icon"></i></a>
                 </div> 
                 </li>                
             <li>
-                <a href="" class="filter-listing"  ng-click="call_filter_list('filter_list_rank');">
+                <a href="" class="filter-listing"  ng-click="call_filter_list();">
                     Filters <i class="fa fa-caret-down fa-lg downarrow-icon"></i>
                 </a>
             </li>
