--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
     <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
         <ul class="left-menu">
             <li>Welcome {{complete_name}},</li>
-            <li ng-class="{active_alert : type == 'brands'}">
+            <li ng-class="{'active-alert' : type == 'brands'}">
                 <a ng-click="showTab('brands')">
                     <label for="">Brands</label>
                 </a>
             </li>
-            <li ng-class="{active_alert : type == 'advertisers'}">
+            <li ng-class="{'active-alert' : type == 'advertisers'}">
                 <a ng-click="showTab('advertisers')">
                     <label for="">Advertisers</label>
                 </a>
