--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 	<!--Angular Js Services/Directives/Filters-->
 	<script type="text/javascript" src="./app.js"></script>
+	<script type="text/javascript" src="./assets/js/filters/months.js"></script>
 	<script type="text/javascript" src="./assets/js/shared/confirmBox/modalConfirmService.js"></script>
 	<script type="text/javascript" src="./assets/js/service.js"></script>
 	<script type="text/javascript" src="./assets/js/filters/safehtml.js"></script>
