--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<script type="text/javascript" src="./assets/js/controllers/authy.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/eulaAgreement.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/ranking.js"></script>
+	<script type="text/javascript" src="./assets/js/masked-input.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/user.js"></script>
 
 	<!--Start - Angular UI grid -->
