Global search grid for short form-14

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<script type="text/javascript" src="./assets/js/controllers/eulaAgreement.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/ranking.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/airings_detail.js"></script>
+	<script type="text/javascript" src="./assets/js/controllers/globalSearch.js"></script>
 	<script type="text/javascript" src="./assets/js/controllers/user.js"></script>
 
 	<!--Start - Angular UI grid -->
